--- a/docs-articles/index.css
+++ b/docs-articles/index.css
@@ -100,12 +100,19 @@ body.sidebar-open .docs-articles {
 }
 
 .docs-articles > pre {
+  width: 80vw;
   background-color: var(--color-blue_base);
   border: 1px solid var(--color-grey_light);
   margin-top: 30px;
   margin-bottom: 30px;
   padding: 20px;
   overflow-x: auto;
+}
+
+@media screen and (min-width: 768px) {
+  .docs-articles > pre {
+    width: auto;
+  }
 }
 
 .docs-articles > pre > code {
@@ -168,8 +175,9 @@ body.sidebar-open .docs-articles {
  */
 
 .docs-articles p > img {
-  width: 100%;
+  width: 90vw;
   display: block;
+  margin: 0 auto;
   margin-top: 20px;
   border: 1px solid var(--color-grey_lighter);
 }
